--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,12 +28,14 @@ jobs:
       
       - name: Build project
         run: |
-          mkdir build
+          mkdir -p build/sk-live-search
+          # Copy all necessary files to the sk-live-search folder
+          rsync -av --exclude='.git*' --exclude='node_modules' --exclude='.*' --exclude='CODE_OF_CONDUCT.md' --exclude='CONTRIBUTING.md' --exclude='ISSUE_TEMPLATE.md' --exclude='PULL_REQUEST_TEMPLATE.md' --exclude='*.dist' --exclude='*.yml' --exclude='*.neon' --exclude='composer.*' --exclude='dev-helpers' --exclude='build' --exclude='wporg-assets' --exclude='phpunit*' --exclude='.github' . build/sk-live-search/
           
       - name: Create artifact
         uses: montudor/action-zip@v1
         with:
-          args: zip -X -r build/sk-live-search.zip . -x *.git* node_modules/\* .* "*/\.*" CODE_OF_CONDUCT.md CONTRIBUTING.md ISSUE_TEMPLATE.md PULL_REQUEST_TEMPLATE.md *.dist *.yml *.neon composer.* dev-helpers** build** wporg-assets** phpunit**
+          args: zip -X -r build/sk-live-search.zip build/sk-live-search
           
       - name: Upload artifact
         uses: actions/upload-artifact@v4
